# X-Editor

./: README.md  force_diagnostics.py  index.html  package-lock.json  package.json  server.js  temp.txt  test-errors.py  test_error.py  vite.config.ts  пример.tsx
src/: App.css  App.tsx  index.html  main.tsx  reading.rs  style.css  types.d.ts  types.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json  test_error.py
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: image_handler.rs  language_server.rs  lib.rs  main.rs  modules.rs  reading.rs  terminal.rs  types.rs
src-tauri/src/commands/: file_operations.rs  fonts.rs  fs_commands.rs  language_server.rs  mod.rs  terminal.rs  window_commands.rs
src/components/: EditorPanel.css  EditorPanel.tsx  EditorPanelContainer.tsx  FileSearchDialog.css  FileSearchDialog.tsx  ImageContainer.tsx  ImageViewer.tsx  TitleBar.css  TitleBar.tsx  VideoPlayer.tsx
src/main-screen/: App.tsx  toolbar.tsx
src/monaco-config/: auto-types.ts  extended-types.ts  file-search.ts  fixMarker.ts  hover-config.ts  import-completion.ts  import-completion.ts.bak  index.ts  jsx-config.ts  jsx-types.ts  language-detector.ts  monaco-advanced-config.ts  monaco-styles.css  other-languages-config.ts  pylance-loader.ts  python-config.ts  register-css.ts  register-html.ts  register-javascript.ts  register-json.ts  register-languages.ts  register-python.ts  register-python.ts.bak  register-tsx.ts  register-typescript.ts  ts-config-override.ts  ts-error-fix.ts  tsconfig.json  tsx-config.ts  tsx-language-config.ts  types-manager.ts  typescript-config.ts  virtual-fs-config.ts
src/monaco-tests/: JsxComponentTest.jsx  README.md  (+12 more)
(+113 files in other folders)
