[package]
name = "xeditor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "xeditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-shadows = "0.2.2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
encoding_rs = "0.8.35"
winapi = { version = "0.3.9", features = ["consoleapi", "errhandlingapi", "wincon"] } # Исправлено здесь
dirs = "6.0.0"
