[package]
name = "xeditor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "xeditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-shadows = "0.2.2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
encoding_rs = "0.8.35"
winapi = { version = "0.3.9", features = ["consoleapi", "handleapi", "minwindef", "minwinbase", "processthreadsapi", "winbase", "wincon", "wincontypes", "namedpipeapi", "winuser"] }
dirs = "6.0.0"
dunce = "1.0.5"
lazy_static = "1.5.0"
portable-pty = "0.9.0"
tokio = { version = "1.44.1", features = ["full"] }
chrono = "0.4.40"
async-recursion = "1.1.1"
futures = "0.3.31"
base64 = "0.22.1"
tiny_http = "0.12.0"
clipboard = "0.5.0"
